syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/tijanadmi/bookings_backend/pb";

message GetUserByTokenRequest {
    string access_token = 1;
}

message GetUserByTokenResponse {
    User user = 1;
}